syntax = "proto3";

package api.flashsale.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/wyfcoding/ecommerce/go-api/flashsale/v1;v1";

// FlashSale Service
service FlashSale {
    // Create a new flash sale event
    rpc CreateFlashSaleEvent(CreateFlashSaleEventRequest) returns (CreateFlashSaleEventResponse);

    // Get a flash sale event by ID
    rpc GetFlashSaleEvent(GetFlashSaleEventRequest) returns (GetFlashSaleEventResponse);

    // List active flash sale events
    rpc ListActiveFlashSaleEvents(ListActiveFlashSaleEventsRequest) returns (ListActiveFlashSaleEventsResponse);

    // 参与秒杀活动（例如：下订单）
    rpc ParticipateInFlashSale(ParticipateInFlashSaleRequest) returns (ParticipateInFlashSaleResponse);

    // Get flash sale product details (e.g., remaining stock)
    rpc GetFlashSaleProductDetails(GetFlashSaleProductDetailsRequest) returns (GetFlashSaleProductDetailsResponse);
}

// Represents a flash sale event
message FlashSaleEvent {
    string id = 1;
    string name = 2;
    string description = 3;
    google.protobuf.Timestamp start_time = 4;
    google.protobuf.Timestamp end_time = 5;
    string status = 6; // e.g., UPCOMING, ACTIVE, ENDED
    repeated FlashSaleProduct products = 7;
    google.protobuf.Timestamp created_at = 8;
    google.protobuf.Timestamp updated_at = 9;
}

// Represents a product within a flash sale event
message FlashSaleProduct {
    string product_id = 1;
    double flash_price = 2;
    int32 total_stock = 3;
    int32 remaining_stock = 4;
    int32 max_per_user = 5;
}

// 创建秒杀活动请求
message CreateFlashSaleEventRequest {
    string name = 1;
    string description = 2;
    google.protobuf.Timestamp start_time = 3;
    google.protobuf.Timestamp end_time = 4;
    repeated FlashSaleProduct products = 5;
}

// 创建秒杀活动响应
message CreateFlashSaleEventResponse {
    FlashSaleEvent event = 1;
}

// 获取秒杀活动请求
message GetFlashSaleEventRequest {
    string id = 1;
}

// 获取秒杀活动响应
message GetFlashSaleEventResponse {
    FlashSaleEvent event = 1;
}

// 获取活跃秒杀活动列表请求
message ListActiveFlashSaleEventsRequest {
    // 目前不需要特定字段
}

// 获取活跃秒杀活动列表响应
message ListActiveFlashSaleEventsResponse {
    repeated FlashSaleEvent events = 1;
    int32 total_count = 2;
}

// 参与秒杀请求
message ParticipateInFlashSaleRequest {
    string event_id = 1;
    string product_id = 2;
    string user_id = 3;
    int32 quantity = 4;
}

// 参与秒杀响应
message ParticipateInFlashSaleResponse {
    string order_id = 1;
    string status = 2; // e.g., SUCCESS, FAILED_NO_STOCK, FAILED_TOO_MANY_ITEMS
    string message = 3;
}

// 获取秒杀商品详情请求
message GetFlashSaleProductDetailsRequest {
    string event_id = 1;
    string product_id = 2;
}

// 获取秒杀商品详情响应
message GetFlashSaleProductDetailsResponse {
    FlashSaleProduct product = 1;
}
